# datamgr

./: .gitattributes  .gitignore  LEGACY_NOTES.md  Makefile  OVERVIEW.md  PROGRESS.md  REPO_INDEX.md  REPO_TREE.md  SPEC.md  START_HERE.md  TOOL_USAGE.md  datamgr_v_2_cross_reference_linking_plan.md  master_plan_introspection_only_navigator_v_1.md  progress.json  pyproject.toml
.dm/: deltas.json  ignore.json
.github/workflows/: pages.yml  repo_index.yml
datamgr/: __init__.py  navspec.py
datamgr/api/: __init__.py  cli.py  manager.py  navigator.py
datamgr/core/: __init__.py  errors.py  hashing.py  jagged.py  keys.py  plan.py  schema.py
datamgr/services/: __init__.py  ingest.py  merge.py  migrate.py  planner.py
datamgr/storage/: __init__.py  catalog_sqlite.py  part_store_h5.py  sqlite_loader.py
datamgr/util/: __init__.py  config.py  events.py  fs.py  warnings.py
docs/: index.html
legacy/datamgr/: __init__.py  affinity_ingest.py  atoms.py  ingest_core.py  manager.py  manifest.py  sqlite_loader.py
legacy/datamgr/pysqlite3-wal2-wheels/.extracted/pysqlite3-0.5.4-cp39-cp39-win_amd64-887819-1756091981/pysqlite3-0.5.4.dist-info/: METADATA  RECORD
tests/: test_placeholder.py
tests/integration/: test_placeholder.py
tests/unit/: test_placeholder.py
tools/: build_navigator.py  deltas.py  dump_tree.py  introspect_collect.py  lint.py  lint_ast.py  lint_common.py  lint_import.py  nav_merge.py  progress.py  repo_index.py  scaffold.py  tick_progress.py
