# This file was created by tools/scaffold.py on 2025-08-26T21:07:02.003625Z.
# Minimal placeholder only. We will populate real skeletons next.
[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamgr"
version = "0.0.0"
description = "Data manager (skeleton per SPEC.md)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{name = "Your Name"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
]

[tool.setuptools.packages.find]
include = ["datamgr*"]
